--- a/age-calculator.html
+++ b/age-calculator.html
@@ -81,7 +81,7 @@ z:السنة المدخلة
           var y=document.getElementById("month2").value;      
           var z=document.getElementById("year2").value;
           /*شروط اخطاء لدخل*/
-         if(x=='' | x>31 | x<1 | y=='' | y>12 | y<1 | z=='' | z>2023 | z<1900)
+         if(x=='' | x>31 | x<1 | y=='' | y>12 | y<1 | z=='' | z>=2023 | z<1900)
           {
           if(x=='') { redbo(document.getElementById("day2"));
           redst(document.getElementById("day1"));
@@ -114,7 +114,7 @@ z:السنة المدخلة
           redst(document.getElementById("year1"));
             window.year5.innerHTML = 'This filed is required';
           }
-          else if(z>2023 | z<1900)
+          else if(z>=2023 | z<1900)
           {
             redbo(document.getElementById("year2"));
           redst(document.getElementById("year1"));
